smallscreen.css
body{
  background-color:#3E4551;
  color:white;
  display:flex;
  flex-direction:column;
  padding:20px 5px;
  font-family:'Open-Sans', sans-serif;
}
h1{
  font-size:30px;
  font-family:Raleway, sans-serif;
}
p1{
  font-size:16px;
}
p2{
  font-size:14px;
}
.container{
  display:flex;
  flex-direction:column;
  padding:50px 15px;
  text-align:center;
}
.noMargin{
  margin:0;
}
.menu{
  display:flex;
  flex-direction:row;
  justify-content:space-between;
  height:30px;
}
#logo{
  list-style:none;
  text-decoration:none;
  margin-right:auto;
}
.logoIMG{
  width:100px;
}
#bottom{
  float:right;
}
.items{
  list-style:none;
  text-decoration:none;
  float:left;
  padding:0 0 0 15px;
}
#intro{
  height:45%;
}
.mainIMG{
  width:100%;
}

button{
  background-color:#339ECC;
}
.input{
  border-style:none;
  height:60px;
  width:80%;
  margin: 5% auto;
  border-radius:30px;
  color:white;
}
.centerIcon{
  width:100px;
  margin:0 auto;
}
.qouteCard{
  padding:20px 30px;
  margin:20px 10px;
  background-color:#3D4657;
}
.profileInfo{
  
  margin:20px 0;
}
.profilePic{
  float:left;
  height:50px;
  border-radius:100px;
  margin-right:15px;
 
}
.noMarPad{
  margin:0;
  padding-bottom:10px;
}
.bottomLogo{
  width:200px;
  margin-left:20px;
}
.contactText{
  margin:50px 50px 0;
  width:90%;
}
.icons{
  float:left;
}
.map{
  list-style-image:url(images/icon-location.svg);
}
.phone{
  list-style-image:url(images/icon-phone.svg);
}
.email{
  list-style-image:url(images/icon-email.svg);
}
.bottomNav{
  margin:20px 10px;
  list-style:none;
}

